--- a/Login.css
+++ b/Login.css
@@ -86,6 +86,23 @@ flex: 1;
 	width: 160px;
 }
 
+.box .home li {
+	border: 0;
+	background: none;
+	display: block;
+	margin: 20px auto;
+	text-align: center;
+	border: 2px solid #2ecc71;
+	padding: 14px 10px;
+	width: 200px;
+	outline: none;
+	color: white;
+	border-radius: 24px;
+	transition: 0.25s;
+	cursor: pointer;
+}
+.box .home li :hover{
 	
+}	
 
 
