--- a/Login.css
+++ b/Login.css
@@ -96,7 +96,6 @@ flex: 1;
 	padding: 14px 10px;
 	width: 200px;
 	outline: none;
-	color: white;
 	border-radius: 24px;
 	transition: 0.25s;
 	cursor: pointer;
@@ -104,5 +103,9 @@ flex: 1;
 .box .home li :hover{
 	
 }	
+a{
+    color: white ;
+    text-decoration: none;
+}
 
 
